# mt-dom

./: Cargo.toml  Changelog.md  README.md  TODO.md  test.sh
.github/workflows/: rust.yml
examples/: children.rs  non_static.rs  simple.rs
src/: apply_patches.rs  diff.rs  diff_lis.rs  lib.rs  node.rs  patch.rs  zipper.rs
src/diff/: diff_keyed.rs  keyed.rs  keyed_elements.rs
src/node/: attribute.rs  element.rs
src/node/attribute/: callback.rs
src/patch/: add_attributes.rs  append_children.rs  change_comment.rs  change_text.rs  insert_children.rs  insert_node.rs  remove_attributes.rs  remove_children.rs  remove_node.rs  replace_node.rs  tree_path.rs
tests/: class_test.rs  diff_keyed.rs  diff_keyed_test.rs  diff_lis.rs  diff_mixed.rs  diff_node_list.rs  diff_skip_and_replace.rs  diff_tests.rs  fragment_test.rs  insert_patches.rs  massive_keyed.rs  rearranged_keyed_nodes.rs  replace_node_patches.rs  swap_rows.rs  test_apply_patch.rs  test_comments.rs  test_diff_lis.rs  test_node_count.rs  zipper.rs
