[package]
name = "mt-dom"
version = "0.14.0"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "A library for generating patches as a result diffing virtual DOM tree"
repository = "https://github.com/ivanceras/mt-dom"
documentation = "https://docs.rs/mt-dom"
keywords = ["virtual", "dom", "node", "element"]
edition = "2018"

[dependencies]
log = "0.4"
# Used in diffing
longest-increasing-subsequence = { version = "0.1.0", optional = true }

[dev-dependencies]
pretty_env_logger = "0.4"

[features]
with-measure = []
new-diff-algo = ["longest-increasing-subsequence"]
