[package]
name = "mt-dom"
version = "0.55.1"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "A library for generating patches as a result diffing virtual DOM tree"
repository = "https://github.com/ivanceras/mt-dom"
documentation = "https://docs.rs/mt-dom"
keywords = ["virtual", "dom", "node", "element"]
edition = "2021"

[dependencies]
log = "0.4"
longest-increasing-subsequence = "0.1.0"

[dev-dependencies]
pretty_env_logger = "0.4"
